--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "node": "^19.8.1",
+    "node3": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
