--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fs": "0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "node": "^19.8.1",
     "node3": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.22"
   }
 }
