inserted morgan for debugging purposes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs": "0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
     "node": "^19.8.1",
     "node3": "^1.0.0"
   },
