--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs": "0.0.1-security",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "node": "^19.8.1",
-    "node3": "^1.0.0"
+    "node3": "^1.0.0",
+    "openai": "^3.2.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
